--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   lift is short,be happy.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://ichengchao.github.io" # the base hostname & protocol for your site
-twitter_username: kobe
+twitter_username: ichengchao
 github_username:  ichengchao
 
 # Build settings
