--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,12 @@ navigations:
     class: fa fa-list-ul fa-lg
     href: /archive.html
   - title: Tags
-    class: fa fa-tags
+    class: fa fa-tags fa-lg
     href: /tags.html
   - title: About
-    class: fa fa-user-secret
+    class: fa fa-user-secret fa-lg
     href: /about.html
   - title: Subscribe
-    class: fa fa-rss
+    class: fa fa-rss fa-lg
     href: /atom.xml
 
